@@ -1,5 +1,13 @@
 {{$NEXT}}
 
+Features:
+* In line with Universal Dependencies v2, added value 'vnoun' of feature
+  'verbform' (verbal noun). The value 'ger' is still available but slightly
+  deprecated (if something is traditionally called gerund but can be plausibly
+  called verbal noun, it should be labeled 'vnoun').
+
+
+
 3.003     2017-01-18 07:27:27+01:00 Europe/Prague
 
 Fixes:
